[package]
name = "ploirc"
version = "0.2.0"
authors = [
    "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>",
    "pbzweihander <pbzweihander@gmail.com>",
]
description = "Low-level IRC client library with robustness in mind."
documentation = "https://docs.rs/ploirc/"
keywords = ["irc", "client"]
homepage = "https://github.com/pbzweihander/ploirc"
repository = "https://github.com/pbzweihander/ploirc"
readme = "README.md"
license = "MIT or Apache 2.0"
edition = "2018"
build = "build.rs"

[features]
default = ["std"]
std = []

[dependencies]
encoding = "0.2.32"
failure = "0.1.5"
